<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="title">Title</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="save">Save</string>
</resources>